--- a/Screenshot/App.xaml
+++ b/Screenshot/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Screenshot.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Screenshot"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Screenshot">
     <Application.Resources>
          
     </Application.Resources>
