--- a/Screenshot/MainWindow.xaml
+++ b/Screenshot/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Screenshot"
         mc:Ignorable="d"
         WindowStyle="ToolWindow"
-        Title="MainWindow" Height="200" Width="300">
+        Title="Screenshot" Height="200" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
